# orchid

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Directory.Build.props  Orchid.sln  README.md  docker-compose.yml  justfile
.spellbook/: conjure-mvp.md
backend/: Cargo.toml
backend/migrations/: 20240101000000_initial.up.sql  20260308220000_projection_views.up.sql  20260308223000_cqrs_tables.up.sql
backend/src/: config.rs  lib.rs  main.rs  query.rs  state.rs
backend/src/ai/: backend.rs  mod.rs  registry.rs  router.rs
backend/src/api/: handlers.rs  models.rs  router.rs
backend/src/auth/: handlers.rs  mod.rs  models.rs
backend/src/domain/: conversation.rs  mod.rs  views.rs
backend/src/ws/: handler.rs  protocol.rs
backend/tests/: acceptance_api.rs  acceptance_auth.rs  acceptance_event_sourcing.rs  acceptance_infrastructure.rs  acceptance_multi_model.rs  acceptance_projections.rs  acceptance_websocket.rs  app_integration.rs  projection_views.rs
docker/: Caddyfile  backend.Dockerfile  docker-compose.yml
docs/: README.md
docs/adr/: 001-architecture-overview.md  template.md
frontend/: Dockerfile  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
frontend/acceptance-tests/: frontend-acceptance-tests.spec.ts
frontend/src/: App.spec.ts  App.vue  main.ts
scripts/: check-env.sh
src/: README.md
src/Backend/: .gitkeep  Dockerfile
src/Frontend/: .gitkeep  Dockerfile
src/Orchid.AI/: IOrchidAI.cs
src/Orchid.API/: IOrchidAPI.cs  Orchid.API.http  (+2 more)
tests/: README.md
(+42 files in other folders)
