[package]
name = "orchid"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Event Sourcing
cqrs-es = "0.5"
postgres-es = "0.5"

# OpenAI
async-openai = "0.33"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp"] }
deadpool-redis = "0.23"

# Auth
axum-login = "0.18"
tower-sessions = { version = "0.15", features = ["signed"] }
tower-sessions-sqlx-store = "0.15"
password-auth = "1.0"
time = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum-test = "19"
mockall = "0.14"
wiremock = "0.6"
tokio-tungstenite = "0.26"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "redis"] }
